# anime-recommender

./: .gitignore  Dockerfile  FULL_DOCUMENTATION.md  README.md  llmops-k8s.yaml  pyproject.toml  requirements.txt  setup.py
config/: config.py
pipeline/: build_pipeline.py  pipeline.py
src/: prompt_template.py  recommender.py  vector_store.py
utils/: logger.py
